Updates from Overleaf

--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -22,13 +22,13 @@ Similar to the 1000 brains theory, this model has drawbacks that prevent its pra
 
 \paragraph{Capsule Networks.} Neuronal capsule networks (CapsNet) \sidecite{sabour_dynamic_2017} mimic biological neural organisation and explicitly model hierarchical relationships. These networks group neurons into ``capsules''; each capsule represents a property such as position, size, orientation, deformation, texture, colour or movement. Several of these capsules form more stable representations for higher-level capsules. \emph{Dynamic routing} \sidecite{ash_design_1981} matches bottom-up activations and top-down concepts generated based on available evidence over multiple iterations. It allows the network to learn viewpoint invariant knowledge and can deal with highly overlapping objects by detecting that one object is in front of another. However, CapsNets are still an active area of research and are not yet adopted in real-world scenarios. In particular, dynamic routing makes the algorithm slow, and so far, this approach has only worked on small datasets such as MNIST \sidecite{lecun_gradient-based_1998} or CIFAR-10 \sidecite{krizhevsky_learning_2009}.
 
-Some concepts of CapsNets are closely related to those of the 1000 brains theory and RCNs. However, CapsNets have their origins in computer science and are oriented towards deep learning principles. In contrast, the other frameworks have originated in neuroscience and focus on biological plausibility. CapsNets \emph{divide the features} into capsules which is helpful for good generalisation. However, a severe problem is the accumulation of spatial information, which prevents the model from scaling to larger datasets.
+Some concepts of CapsNets are closely related to those of the 1000 brains theory and RCNs. However, CapsNets have their origins in computer science and are oriented towards deep learning principles. In contrast, the other frameworks have originated in neuroscience and focus on biological plausibility. CapsNets \emph{divide the features} into capsules which is helpful for generalisation. However, a severe problem is the accumulation of spatial information, which prevents the model from scaling to larger datasets.
 The dynamic process of \emph{iterating} between low-level and high-level features to analyse hypotheses is promising to prevent early commitment \sidecite{marr_vision_2010} and is highly relevant for this thesis.
 
 
 \paragraph{Parsimony and Self-Consistency.} \sideciteay{ma_principles_2022} suggest that appropriate data structuring can lead to the emergence of intelligence, especially if the data is structured according to the principles of parsimony and self-consistency. The two principles describe \emph{what} and \emph{how} should be learned. Parsimony implies that an intelligent learning system should recognise low-dimensional structures in observed high-dimensional data and organise them in the most compact and structured way\sidenote{The goal is not to achieve the best possible compression but to obtain compact and structured representations in a computationally efficient way.}. The second principle of self-consistency states that an intelligent learning system minimises the internal discrepancy between observed and regenerated observations. Such internal representations can be learned through self-criticism \sidecite{rennie_self-critical_2017}. The described framework is promising as it incorporates biological concepts into a framework that unifies and clarifies many practical and empirical findings of deep learning.
 Unfortunately, the authors do not present any metrics, so estimating the framework's performance is difficult.
-This framework's challenge is the implementation of the parsimony principle, i.e., defining the constraints responsible for forming the latent space and scaling it to larger datasets.
+The framework's challenge is implementing the parsimony principle, i.e., defining the constraints responsible for forming the latent space and scaling it to larger datasets.
 
 \paragraph{Actionable Representations.} Another frequently used principle inspired by biological learning is the combination of representations with actions \sidecite{knoblich_social_2006, zhou_does_2019}. It is known that animals integrate their actions (i.e., movements) with incoming sensory signals \sidecite{keller_sensorimotor_2012}.
 \citeay{keurti_homomorphism_2023} argue that such efference copies\sidenote{The internal copy of an outgoing motion-generating signal.} help to learn useful latent representations of input the visual system perceives. They allow an agent to perform actions by transforming objects and ensure that real-world transformations can also be applied to latent representations, i.e., mental objects and real-world objects remain consistent when similar transformations are applied.
@@ -42,7 +42,6 @@ Actionable representations not only represent the system's input data but also c
     \item Learning an object's appearance from different viewpoints requires sequences of images of the same object.
     \item Learning actionable representations requires a simulation in which actions can be applied to objects. 
 \end{itemize}
-Therefore, using actionable representations come with the costs of curating more complex datasets.
 
 \paragraph{Active Inference.} \citeay{lecun_path_2022} describes that energy functions are well suited to make predictions of the world state based on actions because they can shape the latent space well due to their regulating properties.
 In the context of active inference \sidecite{friston_active_2016, parr_active_2022}, perception presents itself as a process of minimising the free energy \cite{hinton_training_2002} of variation with respect to beliefs about hidden variables. This process enables planning and inference by modelling generative processes $p(s,o)$. For example, if it rained at night ($p(s)$), one can infer that the grass is wet ($p(o)$). The model tries to model the chances of different hidden situations $p(s|o)$ based on prior beliefs ($p(s)$) and the likelihood of what it already observed ($p(o|s)$). 
@@ -80,7 +79,7 @@ Furthermore, lateral connections are only used at the end of the network, thereb
 Moreover, Lehmann does not build net fragments and thus ignores some of the aspects of the theory.
 
 In this thesis, lateral connections are used to build net fragments to overcome the limitations of the LCL layer.
-Furthermore, the thesis strictly follows the theory of natural intelligence, implementing the proposed principles within a concrete computational framework. It analyses the theory of natural intelligence by conducting experiments and contributes to making it more concrete.
+Furthermore, it analyses the theory of natural intelligence by conducting experiments and contributes to making it more concrete.
 
 \subsection{Projection Fibres}\seclbl{projection_fibres}
 An important principle of the theory of natural intelligence is the rendering of topological structures.
@@ -175,7 +174,7 @@ Growing networks overcome these limitations and add nodes or whole layers of nod
 %or be grown from a single cell \cite{raghavan_neural_2019} by adding additional cells and connections.
 
 \paragraph{Relevance.} The proposed framework is highly related to the aforementioned self-organising principles: First, net fragments can reconstruct local patterns when occluded, resembling methodologies that can grow patterns. Second, projection fibres implement a mapping from scenes to reference frames, related to approaches that implement classification based on self-organising principles. Finally, the proposed framework relies on a self-organising Hebbian learning algorithm.
-In contrast, the architecture of the network is currently predefined and has not yet adopted a self-organising approach. Nevertheless, it is essential for future research efforts to explore the dynamic incorporation of patterns in reference frames, thereby increasing the relevance of introduced concepts such as self-organising maps (SOMs).
+In contrast, the architecture of the network is predefined and has not yet adopted a self-organising approach. Nevertheless, it is essential for future research efforts to explore the dynamic incorporation of patterns in reference frames, thereby increasing the relevance of introduced concepts such as self-organising maps (SOMs).
 
 
 \begin{comment}
